--- a/src/javascript/components/Squares/SideSquare/SideSquare.css
+++ b/src/javascript/components/Squares/SideSquare/SideSquare.css
@@ -1,4 +1,4 @@
-.square {
+.side-square {
     background: #fff;
     border: 1px solid #999;
     float: left;
@@ -13,7 +13,7 @@
     width: 34px;
 }
 
-.square:focus {
+.side-square:focus {
     outline: none;
 }
 
