--- a/src/javascript/components/Ball/Ball.css
+++ b/src/javascript/components/Ball/Ball.css
@@ -1,6 +1,15 @@
 .sphere {
     display: block;
-    background: black;
+    background: aqua;
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    margin: 0;
+  }
+
+  .sphere-second {
+    display: block;
+    background: tomato;
     border-radius: 50%;
     height: 10px;
     width: 10px;
