Add: color to the players turn box based on player colour code

--- a/src/javascript/components/Game/Game.css
+++ b/src/javascript/components/Game/Game.css
@@ -1,4 +1,4 @@
-.status {
+.status-blue {
   margin-bottom: 10px;
   background: white;
   background-color: #222;
@@ -7,7 +7,20 @@
   justify-content: center;
   align-items: center;
   padding: 25px;
-  color: white;
+  color: aqua;
+  font-size: 1.5em;
+  }
+
+.status-red {
+  margin-bottom: 10px;
+  background: white;
+  background-color: #222;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px;
+  color: tomato;
   font-size: 1.5em;
   }
 
